<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/pong_mate__ttsk_bg_with_table2"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_play"
            style="@style/start_screen_menu_button"
            android:layout_width="200dp"
            android:layout_height="80sp"
            android:layout_marginTop="300dp"
            android:text="@string/play"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_ez_desc"
            style="@style/start_screen_menu_button"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:text="@string/table_tennis"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_play" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_ittf_rules"
            style="@style/start_screen_menu_button"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:text="@string/ittf_rules"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_ez_desc" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_about"
            style="@style/start_screen_menu_button"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:text="@string/about"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_ittf_rules" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>