<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/azure">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <TextView
            android:id="@+id/tv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kaushan_script"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="68sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline_top" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_mid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <Button
            android:id="@+id/btn_new_game"
            style="@style/large_button"
            android:layout_width="@dimen/main_screen_button_width"
            android:layout_height="wrap_content"
            android:text="@string/new_game"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline_mid" />

        <Button
            android:id="@+id/btn_continue"
            style="@style/large_button"
            android:layout_width="@dimen/main_screen_button_width"
            android:layout_height="wrap_content"
            android:text="@string/continue_str"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_new_game" />

        <!--            style="@style/menu_button"-->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@color/azure"
            android:contentDescription="@string/undo"
            android:src="@drawable/ic_baseline_info_24"
            android:tooltipText="@string/orientation"
            app:fabCustomSize="@dimen/fab_custom_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>