<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@color/bt_red"
            app:layout_constraintBottom_toTopOf="@id/guideline_mid"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:src="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@color/bt_black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline_mid"
            tools:ignore="ContentDescription" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_mid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/tv_best_of_label"
            style="@style/text_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/best_of"
            app:layout_constraintBottom_toTopOf="@id/slider_best_of"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextContrastCheck"
            tools:layout_editor_absoluteY="420dp" />


        <com.google.android.material.slider.Slider
            android:id="@+id/slider_best_of"
            android:layout_width="200dp"
            android:layout_height="1dp"
            android:backgroundTint="@color/transparent"
            android:contentDescription="@string/best_of_no_content"
            android:stepSize="2"
            android:valueFrom="3"
            android:valueTo="21"
            app:labelBehavior="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:thumbColor="@color/white"
            app:tickColorActive="@color/transparent"
            app:tickColorInactive="@color/transparent"
            app:trackColorActive="@color/transparent"
            app:trackColorInactive="@color/transparent" />

        <Button
            android:id="@+id/btn_next"
            style="@style/large_button"
            android:layout_width="@dimen/main_screen_button_width"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>