<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/fs_hor_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.10" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/fs_hor_40"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/fs_hor_45"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.45" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/hor_49"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.495" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/hor_51"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.505" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/fs_hor_50"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/fs_hor_55"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.55" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/fs_hor_60"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/fs_hor_90"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.90" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/fs_vert_15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.10" />

        <!--        <androidx.constraintlayout.widget.Guideline-->
        <!--            android:id="@+id/fs_vert_175"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:orientation="vertical"-->
        <!--            app:layout_constraintGuide_percent="0.175" />-->

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vert_50"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.25" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/fs_vert_75"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/fs_vert_90"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <ImageView
            android:id="@+id/table_top"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:contentDescription="@string/first_server_top"
            android:src="@color/bt_red"
            app:layout_constraintBottom_toTopOf="@id/solid_midline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/table_bottom"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:contentDescription="@string/first_server_bottom"
            android:src="@color/bt_black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/solid_midline"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/solid_midline"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@color/white"
            app:layout_constraintBottom_toTopOf="@id/hor_51"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hor_49"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_first_top"
            style="@style/score_large"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textAllCaps="true"
            app:layout_constraintBottom_toTopOf="@id/fs_hor_40"
            app:layout_constraintEnd_toEndOf="@id/fs_vert_90"
            app:layout_constraintStart_toStartOf="@id/fs_vert_15"
            app:layout_constraintTop_toBottomOf="@id/fs_hor_10"
            tools:ignore="ContentDescription"
            tools:text="@string/first_server" />

        <TextView
            android:id="@+id/tv_first_bottom"
            style="@style/score_large"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textAllCaps="true"
            app:layout_constraintBottom_toTopOf="@id/fs_hor_90"
            app:layout_constraintEnd_toEndOf="@id/fs_vert_90"
            app:layout_constraintStart_toStartOf="@id/fs_vert_15"
            app:layout_constraintTop_toBottomOf="@id/fs_hor_60"
            tools:ignore="ContentDescription"
            tools:text="@string/first_server" />

        <Button
            android:id="@+id/btn_lets_play"
            style="@style/large_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/start"
            app:layout_constraintBottom_toTopOf="@id/fs_hor_55"
            app:layout_constraintEnd_toEndOf="@id/fs_vert_75"
            app:layout_constraintStart_toStartOf="@id/vert_50"
            app:layout_constraintTop_toBottomOf="@id/fs_hor_45" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_back"
            style="@style/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>